--- a/quick-server/src/main/resources/application-dev.yml
+++ b/quick-server/src/main/resources/application-dev.yml
@@ -1,8 +1,10 @@
 quick:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    host: localhost
+    host: 10.10.1.198
     port: 3306
     database: quick_take_out
+#    url: jdbc:mysql://10.10.1.198:3306/quick_take_out?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: 123123
+
